cluster/apps/networking/authentik/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authentik
  namespace: networking
spec:
  forwardAuth:
    # TODO: use private domain (*.home.*)
    address: http://ak-outpost-authentik-embedded-outpost:9000/akprox/auth/traefik
    trustForwardHeader: true
    # TODO: Added for test purposes
    insecureSkipVerify: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
