cluster/apps/networking/authentik/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: networking
  name: traefik-sso
spec:
  routes:
    - kind: Rule
      match: "Host(`z.${SECRET_DOMAIN}`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - kind: Rule
      match: "Host(`ha.${SECRET_DOMAIN}`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - kind: Rule
      match: "Host(`traefik.${SECRET_DOMAIN}`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
